// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewSubmitReturn component should render correctly 1`] = `
<ScrollView
  style={
    Object {
      "backgroundColor": "#EBEDEF",
      "flex": 1,
    }
  }
>
  <StepText
    currentStep={3}
    maxStep={3}
  />
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        size="large"
        weight="bold"
      >
        Review & Submit
      </Text>
      <Text>
        Please review all information and tap Create My Return.
      </Text>
      <ReturnPolicyLink />
    </View>
    <FlatList
      data={
        Array [
          Object {
            "groupSummary": Object {
              "originalCost": 630,
              "returnShipping": -7,
              "tax": 8,
              "total": 631,
            },
            "id": 1,
            "items": Array [
              Object {
                "productUniqueId": 1,
              },
            ],
            "refund": Object {
              "type": "Store Credit",
            },
            "shippingMethod": Object {
              "price": 7,
              "title": "UPS Drop-off",
            },
          },
          Object {
            "groupSummary": Object {
              "originalCost": 630,
              "returnShipping": -12,
              "tax": 8,
              "total": 631,
            },
            "id": 2,
            "items": Array [
              Object {
                "productUniqueId": 2,
              },
            ],
            "refund": Object {
              "cardInfo": Object {
                "cardType": "Discover",
                "expDate": "1/1/21",
                "lastFour": 1234,
              },
              "type": "Credit Card",
            },
            "shippingMethod": Object {
              "price": 12,
              "title": "UPS Pick-up",
            },
          },
        ]
      }
      keyExtractor={[Function]}
      renderItem={[Function]}
      style={
        Object {
          "backgroundColor": "#EBEDEF",
          "marginTop": 16,
        }
      }
    />
    <Button
      accessibilityLabel="Create My Return"
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 16,
          "marginHorizontal": 8,
        }
      }
      text="Create My Return"
      trackAction="Test"
    />
  </View>
</ScrollView>
`;

exports[`ReviewSubmitReturn functions displayName 1`] = `undefined`;

exports[`ReviewSubmitReturn functions renderGroupSummary 1`] = `
<View
  style={
    Object {
      "margin": 8,
    }
  }
>
  <View>
    <Text
      weight="bold"
    >
      Return Method:
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text>
        UPS Drop-off
         — 
      </Text>
      <LinkButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        Edit
      </LinkButton>
    </View>
  </View>
  <View>
    <Text
      weight="bold"
    >
      Refund Type:
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text>
        Store Credit
      </Text>
      <LinkButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        More Info
      </LinkButton>
    </View>
    <Text
      size="small"
      style={
        Object {
          "marginTop": 8,
        }
      }
      weight="bold"
    >
      Refunds are issued approximately 8 days after items are received.
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#D0D3D4",
        "borderWidth": 1,
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#D0D3D4",
          "padding": 8,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text>
          Original Cost of Items:
        </Text>
        <Text />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text>
          Collected Tax:
        </Text>
        <Text />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text>
          Return Shipping:
        </Text>
        <Text />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          Object {
            "padding": 8,
          },
        ]
      }
    >
      <Text
        size="large"
        weight="bold"
      >
        Refund Total:
      </Text>
      <Text
        size="large"
        weight="bold"
      />
    </View>
  </View>
</View>
`;

exports[`ReviewSubmitReturn functions renderItem 1`] = `
<SimplifiedProductInfo
  headerRowAction={
    <LinkButton
      onPress={[Function]}
    >
      Edit
    </LinkButton>
  }
  productUniqueId={1}
  style={
    Object {
      "marginBottom": 0,
      "marginHorizontal": 0,
    }
  }
/>
`;

exports[`ReviewSubmitReturn functions renderItemsGroup 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#D0D3D4",
      "borderWidth": 1,
      "marginBottom": 8,
      "marginHorizontal": 8,
    }
  }
>
  <FlatList
    data={
      Array [
        Object {
          "productUniqueId": 1,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      Object {
        "borderBottomColor": "#D0D3D4",
        "borderBottomWidth": 1,
        "marginBottom": 8,
      }
    }
  />
  <View
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <View>
      <Text
        weight="bold"
      >
        Return Method:
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text>
          UPS Drop-off
           — 
        </Text>
        <LinkButton
          onPress={[Function]}
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          Edit
        </LinkButton>
      </View>
    </View>
    <View>
      <Text
        weight="bold"
      >
        Refund Type:
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text>
          Store Credit
        </Text>
        <LinkButton
          onPress={[Function]}
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          More Info
        </LinkButton>
      </View>
      <Text
        size="small"
        style={
          Object {
            "marginTop": 8,
          }
        }
        weight="bold"
      >
        Refunds are issued approximately 8 days after items are received.
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#D0D3D4",
            "padding": 8,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text>
            Original Cost of Items:
          </Text>
          <Text />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text>
            Collected Tax:
          </Text>
          <Text />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text>
            Return Shipping:
          </Text>
          <Text />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            Object {
              "padding": 8,
            },
          ]
        }
      >
        <Text
          size="large"
          weight="bold"
        >
          Refund Total:
        </Text>
        <Text
          size="large"
          weight="bold"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ReviewSubmitReturn functions renderRefundType 1`] = `
<View>
  <Text
    weight="bold"
  >
    Refund Type:
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text>
      Store Credit
    </Text>
    <LinkButton
      onPress={[Function]}
      style={
        Object {
          "marginLeft": 8,
        }
      }
    >
      More Info
    </LinkButton>
  </View>
  <Text
    size="small"
    style={
      Object {
        "marginTop": 8,
      }
    }
    weight="bold"
  >
    Refunds are issued approximately 8 days after items are received.
  </Text>
</View>
`;

exports[`ReviewSubmitReturn functions renderRefundType 2`] = `
<View>
  <Text
    weight="bold"
  >
    Refund Type:
  </Text>
  <CreditCardInfo
    cardType="Discover"
    expDate="1/1/21"
    lastFour={1234}
  />
  <Text
    size="small"
    style={
      Object {
        "marginTop": 8,
      }
    }
    weight="bold"
  >
    Refunds are issued approximately 8 days after items are received.
  </Text>
</View>
`;

exports[`ReviewSubmitReturn functions renderShippingMethod 1`] = `
<View>
  <Text
    weight="bold"
  >
    Return Method:
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text>
      UPS Drop-off
       — 
    </Text>
    <LinkButton
      onPress={[Function]}
      style={
        Object {
          "marginLeft": 8,
        }
      }
    >
      Edit
    </LinkButton>
  </View>
</View>
`;

exports[`ReviewSubmitReturn functions route 1`] = `undefined`;

exports[`ReviewSubmitReturn functions setScreenTrackingInformation 1`] = `
Object {
  "name": "build:app:more:reviewsubmitreturn",
}
`;
